feat(dependencies): update package.json and enhance streaming functionality
- Added new dependencies: axios, node-fetch, sharp, and their respective type definitions.
- Introduced a new script `start-new-api` for running the new API example.
- Implemented stream preview functionality in the basic example, allowing for a preview image to be set before starting the video stream.
- Updated configuration in the new API example to include new token and author IDs, as well as improved stream options (resolution, bitrate, and hardware acceleration).
- Refactored message handling in the new API example to streamline the play command and added support for pause and resume commands.

--- a/examples/basic-new-api/src/config.json
+++ b/examples/basic-new-api/src/config.json
@@ -1,13 +1,13 @@
 {
-    "token": "SELF TOKEN HERE",
-    "acceptedAuthors": ["USER_ID_HERE"],
+    "token": "NzY0NDUxNjQ1NDc1NTIwNTMz.GgeZo4.yIw2hOgezmGLlWX1ENs_UJX49vYkvWUAsQOx8o",
+    "acceptedAuthors": ["686107711829704725", "763792052558626836"],
     "streamOpts": {
-        "width": 1280,
-        "height": 720,
+        "width": 1920,
+        "height": 1080,
         "fps": 30,
-        "bitrateKbps": 1000,
-        "maxBitrateKbps": 2500,
-        "hardware_acceleration": false,
+        "bitrateKbps": 6000,
+        "maxBitrateKbps": 10000,
+        "hardware_acceleration": true,
         "videoCodec": "H264"
     }
 }
