--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   },
   "dependencies": {
     "@libav.js/variant-webcodecs": "^6.4.7",
+    "axios": "^1.6.7",
     "debug-level": "^3.2.1",
     "fluent-ffmpeg": "^2.1.3",
+    "node-fetch": "^3.3.2",
     "p-cancelable": "^4.0.1",
     "p-debounce": "^4.0.0",
+    "sharp": "^0.33.2",
     "sodium-plus": "^0.9.0",
     "uid": "^2.0.2",
     "ws": "^8.18.0"
@@ -25,6 +28,7 @@
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "^20.17.1",
+    "@types/sharp": "^0.32.0",
     "@types/ws": "^8.5.12",
     "tsx": "^4.7.1",
     "typescript": "^5.6.3"
@@ -37,7 +41,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "tsx examples/basic/src/index.ts"
+    "start": "tsx examples/basic/src/index.ts",
+    "start-new-api": "tsx examples/basic-new-api/src/index.ts"
   },
   "keywords": [
     "discord",
