--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@libav.js/variant-webcodecs": "^6.4.7",
     "axios": "^1.6.7",
     "fluent-ffmpeg": "^2.1.3",
+    "libavseeking": "file:../libavSeeking",
     "p-cancelable": "^4.0.1",
     "p-debounce": "^4.0.0",
     "sodium-plus": "^0.9.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zeromq": "^6.0.0"
   },
   "devDependencies": {
     "@types/fluent-ffmpeg": "^2.1.27",
